# simdutf-rs

./: .gitattributes  .gitignore  .gitmodules  CONTRIBUTING.md  Cargo.toml  README.md  build.rs  justfile  rustfmt.toml
.github/workflows/: ci.yml  notify.yml  publish.yml  upgrade.yml
codegen/: Cargo.toml
codegen/src/: api.rs  bindings.rs  common.rs  cpp.rs  main.rs  validate.rs
cpp/: simdutf.cpp  simdutf.h  simdutfrs.cpp  simdutfrs_extra.cpp
crates/simdutf/: Cargo.toml  build.rs
crates/simdutf/cpp/: simdutf.cpp  simdutf.h  simdutfrs.cpp  simdutfrs_extra.cpp
crates/simdutf/src/: bindings.rs  extra.rs  generated.rs  lib.rs  validate.rs
crates/simdutf/tests/: base64.rs  transcoding.rs
scripts/: check-release.py  download.sh  generate.sh  upgrade.py  vendor.sh
src/: api.rs  bindings.rs  extra.rs  generated.rs  lib.rs  tests.rs
src/cpp/: simdutf.cpp  simdutf.h
tests/: base64.rs  transcoding.rs  trim_partial.rs  validatation.rs  validation.rs
