[package]
name = "simdutf"
version = "0.7.0"
edition = "2021"
license = "MIT"
description = "Unicode validation and transcoding at billions of characters per second"
repository = "https://github.com/Nugine/simdutf-rs"
keywords = ["utf8", "unicode", "string", "validation", "simd"]
categories = ["encoding", "algorithms", "no-std", "text-processing"]
readme = "README.md"
rust-version = "1.78.0"

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["detect_encoding", "ascii", "latin1", "utf8", "utf16", "utf32", "base64"]
detect_encoding = []
ascii = []
latin1 = []
utf8 = []
utf16 = []
utf32 = []
base64 = []

[build-dependencies]
cc = "1.2.56"

[dependencies]
bitflags = "2.11.0"

[workspace]
members = ["codegen"]
resolver = "2"

[profile.release]
lto = "fat"
